# CSCE-120-Group-Project

./: .gitignore  ALL_SOURCE_CODE.md  ARCHITECTURE_CURRENT_VS_FUTURE.md  ARCHITECTURE_SUMMARY.md  ARTIFACT_3_IMPLEMENTATION_VALIDATION.md  AlertService.cpp  AlertService.h  AlertService_main.cpp  ApiGatewayService.cpp  ApiGatewayService.h  ApiGatewayService_main.cpp  Artifact 3.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_alert_service.txt  CMakeLists_api_gateway.txt  CMakeLists_data_processing.txt  CMakeLists_database_service.txt  CMakeLists_frontend.txt  CMakeLists_location_service.txt  CMakeLists_master.txt  CMakeLists_ml_service.txt  CMakeLists_weather_data.txt  COMPLETION_REPORT.md  DataProcessingService.cpp  DataProcessingService.h  DataProcessingService_main.cpp  DatabaseService.cpp  DatabaseService.h  DatabaseService_main.cpp  Dockerfile  LocationService.cpp  LocationService.h  LocationService_main.cpp  MLService.cpp  MLService.h  MLService_main.cpp  Makefile  Makefile.README.md  Makefile.ci  (+21 more)
.github/: copilot-instructions.md
.github/workflows/: README.md  build-test.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_COMPLIANCE.md  CI-CD.md  CI_CD.md  MAKEFILE.md  OUTPUT_CAPTURE_GUIDE.md  SETUP.md  SUCCESS_CRITERIA.md  SYSTEM_COMMUNICATION.md  TESTING_GUIDE.md  USER_GUIDE.md
src/: main.cpp
src/controllers/: AlertController.cpp  AlertController.h  WeatherController.cpp  WeatherController.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: AlertModel.cpp  AlertModel.h  ForecastModel.cpp  ForecastModel.h  WeatherData.cpp  WeatherData.h
src/nowcast/: NowcastEngine.cpp  NowcastEngine.h  SpatialInterpolator.cpp  SpatialInterpolator.h  SpatioTemporalEngine.cpp  SpatioTemporalEngine.h  TemporalInterpolator.cpp  TemporalInterpolator.h
src/qml/: main.qml
src/qml/components/: AlertItem.qml  ForecastCard.qml  LocationInput.qml
src/qml/pages/: MainPage.qml  SettingsPage.qml
src/services/: CacheManager.cpp  CacheManager.h  HistoricalDataManager.cpp  HistoricalDataManager.h  MovingAverageFilter.cpp  MovingAverageFilter.h  NWSService.cpp  NWSService.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PirateWeatherService.cpp  PirateWeatherService.h  WeatherAggregator.cpp  WeatherAggregator.h  WeatherService.cpp  WeatherService.h  WeatherbitService.cpp  WeatherbitService.h
src/utils/: EnvLoader.cpp  EnvLoader.h
test_api/: CMakeLists.txt  test_pirate_api.cpp
tests/: CMakeLists.txt  run_tests_wrapper.sh  test_main.cpp
tests/integration/: test_EndToEnd.cpp
tests/models/: test_WeatherData.cpp
tests/services/: test_AccuracyAtNWSTimes.cpp  test_CacheManager.cpp  test_MovingAverageFilter.cpp  test_NWSService.cpp  test_PerformanceMonitor.cpp  test_PirateVsNWS.cpp  test_PirateWeatherService.cpp  test_SpatioTemporalEngine.cpp  test_WeatherAggregator.cpp
